--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ packaging==21.3
 Pillow==9.3.0
 psycopg2-binary==2.9.5
 PyJWT==2.6.0
+pyotp==2.7.0
 pyparsing==3.0.6
 python-decouple==3.6
 pytz==2021.3
