--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ coreschema==0.0.4
 Django==3.2.16
 django-cors-headers==3.13.0
 django-countries==7.5
+django-filter==22.1
 djangorestframework==3.13.1
 djangorestframework-simplejwt==5.0.0
 drf-yasg==1.20.0
