Feature: Web socket setup for chat

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,18 @@
 asgiref==3.5.2
+async-timeout==4.0.2
+attrs==22.2.0
+autobahn==22.12.1
+Automat==22.10.0
 certifi==2021.10.8
+cffi==1.15.1
+channels==4.0.0
+channels-redis==4.0.0
 charset-normalizer==2.0.9
+constantly==15.1.0
 coreapi==2.3.3
 coreschema==0.0.4
+cryptography==39.0.0
+daphne==4.0.0
 Django==3.2.16
 django-cors-headers==3.13.0
 django-countries==7.5
@@ -11,24 +21,37 @@ djangorestframework==3.13.1
 djangorestframework-simplejwt==5.0.0
 drf-yasg==1.20.0
 gunicorn==20.1.0
+hyperlink==21.0.0
 idna==3.3
+incremental==22.10.0
 inflection==0.5.1
 itypes==1.2.0
 Jinja2==3.0.3
 MarkupSafe==2.0.1
+msgpack==1.0.4
 packaging==21.3
 Pillow==9.3.0
 psycopg2-binary==2.9.5
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.21
 PyJWT==2.6.0
+pyOpenSSL==23.0.0
 pyotp==2.7.0
 pyparsing==3.0.6
 python-decouple==3.6
 pytz==2021.3
+redis==4.4.1
 requests==2.26.0
 ruamel.yaml==0.17.19
 ruamel.yaml.clib==0.2.6
+service-identity==21.1.0
+six==1.16.0
 sqlparse==0.4.2
+Twisted==22.10.0
+txaio==22.2.1
 typing_extensions==4.4.0
 uritemplate==4.1.1
 urllib3==1.26.7
 whitenoise==5.3.0
+zope.interface==5.5.2
