--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,11 +7,13 @@ services:
     volumes:
       - .:/lektore
     ports:
-      - 8000:8000
+      - "8000:8000"
     image: lektore-app:lektore
-    container_name: lektore_container
+    container_name: lektore-api
     command:
       bash -c "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
+    depends_on:
+      - lektore-redis
     environment:
       - DB_NAME=${DB_NAME}
       - DB_USER=${DB_USER}
@@ -19,3 +21,9 @@ services:
       - DB_HOST=${DB_HOST}
       - DB_PORT=${DB_PORT}
       - ALLOWED_HOSTS=${ALLOWED_HOSTS}
+      - REDIS_HOST=${REDIS_HOST}
+      - REDIS_PORT=${REDIS_PORT}
+  lektore-redis:
+    image: redis:alpine
+    container_name: lektore-redis
+
