Update: Setup docker instance for testing

--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -25,5 +25,5 @@ services:
       - REDIS_PORT=${REDIS_PORT}
   lektore-redis-dev:
     image: redis:alpine
-    container_name: lektore-redis
+    container_name: lektore-redis-dev
 
