Update: Setup docker instance for testing

--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -9,7 +9,7 @@ services:
     ports:
       - "8000:8001"
     image: lektore-app:lektore
-    container_name: lektore-api
+    container_name: lektore-api-dev
     command:
       bash -c "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
     depends_on:
