--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,9 @@ async-timeout==4.0.2
 attrs==22.2.0
 autobahn==22.12.1
 Automat==22.10.0
+azure-core==1.26.2
+azure-identity==1.12.0
+azure-storage-blob==12.14.1
 certifi==2021.10.8
 cffi==1.15.1
 channels==4.0.0
@@ -25,12 +28,18 @@ hyperlink==21.0.0
 idna==3.3
 incremental==22.10.0
 inflection==0.5.1
+isodate==0.6.1
 itypes==1.2.0
 Jinja2==3.0.3
 MarkupSafe==2.0.1
+msal==1.20.0
+msal-extensions==1.0.0
 msgpack==1.0.4
+msrest==0.7.1
+oauthlib==3.2.2
 packaging==21.3
 Pillow==9.3.0
+portalocker==2.7.0
 psycopg2-binary==2.9.5
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
@@ -43,6 +52,7 @@ python-decouple==3.6
 pytz==2021.3
 redis==4.4.1
 requests==2.26.0
+requests-oauthlib==1.3.1
 ruamel.yaml==0.17.19
 ruamel.yaml.clib==0.2.6
 service-identity==21.1.0
