--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+anyio==3.6.2
 asgiref==3.5.2
 async-timeout==4.0.2
 attrs==22.2.0
@@ -11,6 +12,7 @@ cffi==1.15.1
 channels==4.0.0
 channels-redis==4.0.0
 charset-normalizer==2.0.9
+click==8.1.3
 constantly==15.1.0
 coreapi==2.3.3
 coreschema==0.0.4
@@ -24,6 +26,8 @@ djangorestframework==3.13.1
 djangorestframework-simplejwt==5.0.0
 drf-yasg==1.20.0
 gunicorn==20.1.0
+h11==0.14.0
+httptools==0.5.0
 hyperlink==21.0.0
 idna==3.3
 incremental==22.10.0
@@ -49,7 +53,9 @@ pyOpenSSL==23.0.0
 pyotp==2.7.0
 pyparsing==3.0.6
 python-decouple==3.6
+python-dotenv==0.21.1
 pytz==2021.3
+PyYAML==6.0
 redis==4.4.1
 requests==2.26.0
 requests-oauthlib==1.3.1
@@ -57,11 +63,16 @@ ruamel.yaml==0.17.19
 ruamel.yaml.clib==0.2.6
 service-identity==21.1.0
 six==1.16.0
+sniffio==1.3.0
 sqlparse==0.4.2
 Twisted==22.10.0
 txaio==22.2.1
 typing_extensions==4.4.0
 uritemplate==4.1.1
 urllib3==1.26.7
+uvicorn==0.20.0
+uvloop==0.17.0
+watchfiles==0.18.1
+websockets==10.4
 whitenoise==5.3.0
 zope.interface==5.5.2
