--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,17 +13,28 @@ services:
 #    command:
 #      sh -c "python manage.py collectstatic --no-input &&ls&& gunicorn lektore.wsgi:application --bind 0.0.0.0:8000"
     depends_on:
+      - lektore-postgres
       - lektore-redis
     environment:
       - DJANGO_SETTINGS_MODULE=lektore.settings
-      - DB_NAME=${LOCAL_DB_NAME}
-      - DB_USER=${LOCAL_DB_USER}
-      - DB_PASSWORD=${LOCAL_DB_PASSWORD}
-      - DB_HOST=${LOCAL_DB_HOST}
-      - DB_PORT=${LOCAL_DB_PORT}
+      - DB_NAME=lektore-db
+      - DB_USER=postgres
+      - DB_PASSWORD=password
+      - DB_HOST=lektore-postgres
+      - DB_PORT=5432
       - ALLOWED_HOSTS=${ALLOWED_HOSTS}
       - REDIS_HOST=${REDIS_HOST}
       - REDIS_PORT=${REDIS_PORT}
+  lektore-postgres:
+    image: postgres:latest
+    container_name: lektore-postgres
+    environment:
+      - POSTGRES_DB=lektore-db
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=password
+    ports:
+      - "5432:5432"
+
   lektore-redis:
     image: redis:alpine
     container_name: lektore-redis
