--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     volumes:
       - .:/lektore
     expose:
-      - "8000:8000"
+      - "8000"
     image: lektore-app:lektore
     container_name: lektore-api
 #    command:
@@ -34,6 +34,8 @@ services:
       - POSTGRES_PASSWORD=password
     ports:
       - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
 
   lektore-redis:
     image: redis:alpine
@@ -48,8 +50,9 @@ services:
       - ./static:/lektore/static
     depends_on:
       - lektore-app
-##volumes:
-##  static:
+volumes:
+  postgres_data:
+
 
 #version: '3'
 
