--- a/nginx.conf
+++ b/nginx.conf
@@ -17,7 +17,7 @@ http {
     server {
         listen 80;
         server_name localhost;
-
+        client_max_body_size 50M;
         location /static/ {
             alias /lektore/static/;
         }
