--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,8 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - ./postgres_data:/var/lib/postgresql/data
+#      - ./postgres_data:/var/lib/postgresql/data/
+        - postgres_data:/var/lib/postgresql/data/
 
   lektore-redis:
     image: redis:alpine
