--- a/DockerFile
+++ b/DockerFile
@@ -1,6 +1,14 @@
-FROM python:3.10
+FROM python:3.9
 
 ENV PYTHONUNBUFFERED=1
+
+########## for microsoft server ##########
+RUN curl https://packages.microsoft.com/keys/microsoft.asc | apt-key add -
+RUN curl https://packages.microsoft.com/config/debian/11/prod.list > /etc/apt/sources.list.d/mssql-release.list
+RUN apt-get update && apt-get install -y \
+    unixodbc \
+    unixodbc-dev \
+    && ACCEPT_EULA=Y apt-get install -y msodbcsql18
 
 RUN mkdir -p /lektore
 
