--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,31 +13,17 @@ services:
 #    command:
 #      sh -c "python manage.py collectstatic --no-input &&ls&& gunicorn lektore.wsgi:application --bind 0.0.0.0:8000"
     depends_on:
-      - lektore-postgres
       - lektore-redis
     environment:
       - DJANGO_SETTINGS_MODULE=lektore.settings
-      - DB_NAME=lektore-db
-      - DB_USER=postgres
-      - DB_PASSWORD=password
-      - DB_HOST=lektore-postgres
-      - DB_PORT=5432
+      - DB_NAME=lektore
+      - DB_USER=lektoreadmin
+      - DB_PASSWORD=@50324435BH
+      - DB_HOST=lektore.database.windows.net
+      - DB_PORT=1433
       - ALLOWED_HOSTS=${ALLOWED_HOSTS}
       - REDIS_HOST=${REDIS_HOST}
       - REDIS_PORT=${REDIS_PORT}
-  lektore-postgres:
-    image: postgres:latest
-    container_name: lektore-postgres
-    restart: always
-    environment:
-      - POSTGRES_DB=lektore-db
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=password
-    ports:
-      - "5432:5432"
-    volumes:
-#      - ./postgres_data:/var/lib/postgresql/data/
-        - postgres_data:/var/lib/postgresql/data/
 
   lektore-redis:
     image: redis:alpine
@@ -52,5 +38,3 @@ services:
       - ./static:/lektore/static
     depends_on:
       - lektore-app
-volumes:
-  postgres_data:
