--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 anyio==3.6.2
-asgiref==3.5.2
+asgiref==3.7.2
 async-timeout==4.0.2
 attrs==22.2.0
 autobahn==22.12.1
@@ -18,11 +18,11 @@ coreapi==2.3.3
 coreschema==0.0.4
 cryptography==39.0.0
 daphne==4.0.0
-Django==3.2.16
+Django==4.2
 django-cors-headers==3.13.0
 django-countries==7.5
 django-filter==22.1
-djangorestframework==3.13.1
+djangorestframework==3.14.0
 djangorestframework-simplejwt==5.0.0
 drf-yasg==1.20.0
 gunicorn==20.1.0
@@ -40,6 +40,7 @@ msal==1.20.0
 msal-extensions==1.0.0
 msgpack==1.0.4
 msrest==0.7.1
+mssql-django==1.3
 oauthlib==3.2.2
 packaging==21.3
 Pillow==9.3.0
@@ -49,6 +50,7 @@ pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.21
 PyJWT==2.6.0
+pyodbc==5.0.1
 pyOpenSSL==23.0.0
 pyotp==2.7.0
 pyparsing==3.0.6
